--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.36",
     "tailwindcss": "^3.4.1",
+    "turbo": "^2.4.0",
     "typescript": "^5.4.2",
     "vite": "^5.1.6",
     "webextension-polyfill": "^0.10.0"
