--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-switch": "^7.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -34,11 +35,15 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "cross-env": "^7.0.3",
+    "eslint": "^9.20.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.36",
     "tailwindcss": "^3.4.1",
     "turbo": "^2.4.0",
     "typescript": "^5.4.2",
+    "typescript-eslint": "^8.23.0",
     "vite": "^5.1.6",
     "webextension-polyfill": "^0.10.0"
   }
