--- a/package.json
+++ b/package.json
@@ -1,50 +1,70 @@
 {
-  "name": "vite-react-tailwindcss-extension",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "chrome-extension-boilerplate-react-vite-gesis-surf",
+  "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
-    "dev": "vite build --watch",
-    "preview": "vite preview",
-    "build:manifest:chrome": "mv dist/manifestv3.json dist/manifest.json",
-    "build:background:chrome": "vite build --config vite.chrome.background.config.ts",
-    "build:js": "vite build --config vite.content.config.ts",
-    "build:web": "tsc && vite build",
-    "build": "cross-env NODE_ENV=production run-s build:js build:web",
-    "build:chrome": "cross-env NODE_ENV=production run-s build:js build:background:chrome build:web build:manifest:chrome"
+    "clean": "rimraf dist && rimraf .turbo && turbo clean",
+    "build": "turbo build",
+    "build:firefox": "cross-env __FIREFOX__=true turbo build",
+    "dev-server": "pnpm -F hmr build && pnpm -F hmr dev-server",
+    "dev": "concurrently --kill-others \"cross-env __DEV__=true turbo dev --concurrency 20\" \"pnpm dev-server\"",
+    "dev:firefox": "concurrently --kill-others \"cross-env __DEV__=true __FIREFOX__=true turbo dev --concurrency 20\" \"pnpm dev-server\"",
+    "test": "turbo test",
+    "type-check": "turbo type-check",
+    "lint": "turbo lint",
+    "lint:fix": "turbo lint:fix",
+    "prettier": "turbo prettier"
   },
+  "type": "module",
   "dependencies": {
-    "@types/chrome": "^0.0.263",
-    "@types/qs": "^6.9.14",
-    "axios": "^1.6.8",
-    "env": "^0.0.2",
-    "idb": "^8.0.0",
-    "prettier": "^3.5.0",
-    "qs": "^6.12.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "react-switch": "^7.0.0"
+    "@types/react-router-dom": "^5.3.3",
+    "pre-commit": "^1.2.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@types/webextension-polyfill": "^0.10.7",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.18",
+    "@types/chrome": "^0.0.304",
+    "@types/node": "^22.13.1",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "@vitejs/plugin-react-swc": "^3.8.0",
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
-    "eslint": "^9.20.0",
-    "eslint-plugin-react": "^7.37.4",
-    "globals": "^15.14.0",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.36",
-    "tailwindcss": "^3.4.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "9.20.0",
+    "eslint-config-airbnb-typescript": "18.0.0",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-prettier": "5.2.3",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.1.0",
+    "husky": "^9.1.7",
+    "postcss": "^8.5.1",
+    "prettier": "^3.5.0",
+    "rimraf": "^6.0.1",
+    "tailwindcss": "^4.0.5",
+    "tslib": "^2.8.1",
     "turbo": "^2.4.0",
-    "typescript": "^5.4.2",
-    "typescript-eslint": "^8.23.0",
-    "vite": "^5.1.6",
-    "webextension-polyfill": "^0.10.0"
+    "typescript": "5.7.3",
+    "vite": "^6.1.0"
+  },
+  "packageManager": "pnpm@9.1.1",
+  "engines": {
+    "node": ">=18.12.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run type-check && npm run prettier"
+    }
   }
 }
