--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "chrome-extension-boilerplate-react-vite-gesis-surf",
-  "version": "0.0.1",
+  "name": "GESIS Surf Extension",
+  "version": "2.0.0",
+  "description": "GESIS Surf ist eine wissenschaftliche Untersuchung zur Erforschung des Online-Verhaltens der Menschen in Deutschland.",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Fersonmx/Gesis-Surf/tree/gesisSurf-v2"
+  },
   "scripts": {
     "clean": "rimraf dist && rimraf .turbo && turbo clean",
     "build": "turbo build",
     "build:firefox": "cross-env __FIREFOX__=true turbo build",
     "dev-server": "pnpm -F hmr build && pnpm -F hmr dev-server",
-    "dev": "concurrently --kill-others \"cross-env __DEV__=true turbo dev --concurrency 20\" \"pnpm dev-server\"",
+    "dev": "concurrently --kill-others \"cross-env __DEV__=true turbo dev --concurrency 20 --filter=!./pages/content-ui --filter=!./pages/devtools-panel\" \"pnpm dev-server\"",
     "dev:firefox": "concurrently --kill-others \"cross-env __DEV__=true __FIREFOX__=true turbo dev --concurrency 20\" \"pnpm dev-server\"",
     "test": "turbo test",
     "type-check": "turbo type-check",
@@ -19,39 +24,39 @@
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "pre-commit": "^1.2.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-router-dom": "^7.1.5"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.304",
-    "@types/node": "^22.13.1",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.23.0",
-    "@typescript-eslint/parser": "^8.23.0",
-    "@vitejs/plugin-react-swc": "^3.8.0",
-    "autoprefixer": "^10.4.20",
-    "concurrently": "^9.1.2",
+    "@types/chrome": "^0.0.268",
+    "@types/node": "^20.12.11",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "9.20.0",
-    "eslint-config-airbnb-typescript": "18.0.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-prettier": "5.2.3",
-    "eslint-plugin-react": "7.37.4",
-    "eslint-plugin-react-hooks": "5.1.0",
-    "husky": "^9.1.7",
-    "postcss": "^8.5.1",
-    "prettier": "^3.5.0",
-    "rimraf": "^6.0.1",
-    "tailwindcss": "^4.0.5",
-    "tslib": "^2.8.1",
-    "turbo": "^2.4.0",
-    "typescript": "5.7.3",
-    "vite": "^6.1.0"
+    "eslint": "8.56.0",
+    "eslint-config-airbnb-typescript": "17.1.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "husky": "^9.0.11",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "rimraf": "^5.0.7",
+    "tailwindcss": "^3.4.3",
+    "tslib": "^2.6.2",
+    "turbo": "^1.13.3",
+    "typescript": "5.2.2",
+    "vite": "^5.2.11"
   },
   "packageManager": "pnpm@9.1.1",
   "engines": {
@@ -68,3 +73,4 @@
     }
   }
 }
+
