--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "type-check": "turbo type-check",
     "lint": "turbo lint",
     "lint:fix": "turbo lint:fix",
-    "prettier": "turbo prettier"
+    "prettier": "turbo prettier",
+    "prepare": "husky"
   },
   "type": "module",
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "idb": "^8.0.0",
+    "lint-staged": "^16.1.6",
     "pre-commit": "^1.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
