--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint": "turbo lint",
     "lint:fix": "turbo lint:fix",
     "prettier": "turbo prettier",
-    "prepare": "husky"
+    "prepare": "husky",
+    "docs": "typedoc"
   },
   "type": "module",
   "dependencies": {
@@ -59,6 +60,7 @@
     "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
     "turbo": "^1.13.3",
+    "typedoc": "^0.28.13",
     "typescript": "5.2.2",
     "vite": "^5.2.11"
   },
