--- a/pages/popup/package.json
+++ b/pages/popup/package.json
@@ -21,7 +21,8 @@
     "@chrome-extension-boilerplate/shared": "workspace:*",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.1.10"
+    "@mui/material": "^6.1.10",
+    "webextension-polyfill": "^0.10.0"
   },
   "devDependencies": {
     "@chrome-extension-boilerplate/hmr": "workspace:*",
